--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         <a href="https://yhbcii.com/af?o=907815c02bb64ba80e25268be8c4dcee:309ab061c2fc9425aaadaacac1faa9e0&v=marathon&subid=Earul" target="_blank" class="watch-button">WATCH LIVE NOW</a>
     </div>
 </body>
-</html>
+</html> 
+
+
+
 <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
@@ -68,5 +71,5 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4768792&101" alt="sites stats" border="0"></a></noscript>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4768792&101" alt="free website stats program" border="0"></a></noscript>
 <!-- Histats.com  END  -->
